--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "widgetName": "IntervalAction",
   "version": "1.0.0",
   "description": "Call a Mendix action based on an interval. Automatically remove the interval when the page is unloaded.",
-  "copyright": "© Mendix Technology BV 2022. All rights reserved.",
+  "copyright": "© Mendix Technology BV 2023. All rights reserved.",
   "author": "Benjamin Griggs",
   "engines": {
-    "node": ">=12"
+    "node": ">=16"
   },
   "license": "MIT",
   "config": {
     "projectPath": "../../",
-    "mendixHost": "http://localhost:8080",
+    "mendixHost": "http://localhost:8082",
     "developmentPort": 3000
   },
   "packagePath": "mendix",
@@ -25,12 +25,18 @@
     "release": "pluggable-widgets-tools release:web"
   },
   "devDependencies": {
-    "@mendix/pluggable-widgets-tools": "^9.0.0",
-    "@types/big.js": "^6.0.2",
-    "@types/react": "~17.0.1",
-    "@types/react-dom": "~17.0.1"
-  },
-  "dependencies": {
+    "@mendix/pluggable-widgets-tools": "^9.24.0",
+    "@types/big.js": "^6.0.2"
+},
+"dependencies": {
     "classnames": "^2.2.6"
-  }
+},
+"resolutions": {
+    "react": "18.2.0",
+    "react-native": "0.70.7"
+},
+"overrides": {
+    "react": "18.2.0",
+    "react-native": "0.70.7"
+}
 }
